OSDOP 125: added ability to search by subareas in system of record (#403)